no z-index on issue borders

--- a/style/style.css
+++ b/style/style.css
@@ -346,7 +346,6 @@ h6 a:hover {
 
 .issues > li:after {
   left: 5px;
-  z-index: 10;
 }
 
 .issues > .open:before {
